# Aleo

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  RECOMMENDATIONS.md  e2e.sh  e2e_inner.sh  e2e_outer.sh
aleo-setup1/: Cargo.toml  README.md  test.sh
aleo-setup1/src/: lib.rs
aleo-setup1/src/cli/: contribute.rs  mod.rs  new_challenge.rs  transform.rs
aleo-setup1/src/wasm/: contribute.rs  mod.rs  phase1.rs
aleo-setup2/: Cargo.toml  README.md
aleo-setup2/src/: main.rs
aleo-setup2/src/cli/: contribute.rs  mod.rs  new.rs  verify.rs
aleo-snark-setup/: Cargo.toml  README.md
aleo-snark-setup/src/: main.rs
aleo-snark-setup/src/cli/: contribute.rs  mod.rs  new.rs  verify.rs
phase1/: Cargo.toml  README.md
phase1-cli/: Cargo.toml  README.md  test.sh
phase1-cli/scripts/: phase1_chunked.sh  phase1_chunked_prepare_phase2.sh  phase1_chunked_prepare_phase2_only.sh  phase1_full.sh
phase1-cli/src/: combine.rs  contribute.rs  lib.rs  new_challenge.rs  transform.rs  transform_pok_and_correctness.rs  transform_ratios.rs
phase1-coordinator/: Cargo.toml  README.md  Rocket.toml
phase1-coordinator/docs/: CoordinatorRequirements.md
phase1-coordinator/examples/basic/: Cargo.toml
phase1-coordinator/src/: coordinator.rs  coordinator_state.rs  environment.rs  lib.rs  logger.rs  macros.rs  main.rs  parameters.rs  serialize.rs  tests.rs
phase1-coordinator/src/apis/: chunk_get.rs  chunk_post.rs  get_ceremony.rs  get_chunk.rs  get_ping.rs  lock_post.rs  mod.rs  ping_get.rs  post_chunk.rs  post_lock.rs  round_get.rs  timestamp_get.rs  transcript_get.rs
phase1-coordinator/src/apis/deprecated/: ceremony_get.rs  mod.rs
phase1-coordinator/src/authentication/: dummy.rs  mod.rs  signature.rs
phase1-coordinator/src/commands/: aggregation.rs  computation.rs  initialization.rs  mod.rs  new.rs  verification.rs
phase1-coordinator/src/locators/: local.rs  locator.rs  mod.rs  remote.rs
phase1-coordinator/src/objects/: ceremony.rs  chunk.rs  contribution.rs  contribution_file_signature.rs  contribution_signature.rs  mod.rs  participant.rs  round.rs  task.rs  tests.rs  transcript.rs
phase1-coordinator/src/storage/: concurrent_memory.rs  disk.rs  in_memory.rs  in_memory_2.rs  memory.rs  mod.rs  storage.rs
phase1-coordinator/src/storage/unused/: concurrent_memory.rs  disk.rs  disk_and_memory.rs  memory.rs  remote.rs
phase1-coordinator/src/testing/: ceremony.json  coordinator.rs  mod.rs  prelude.rs  round.json  round.rs  server.rs  test_round.json
phase1-coordinator/src/testing/resources/: config_test_coordinator.json  config_test_invalid_curve.json  config_test_valid.json  round.json  round_partial.json  (+4 more)
phase1-coordinator/src/tests/: mod.rs  proptests.rs
phase1-coordinator/tests/: mod.rs
phase1-verifier/: Cargo.toml  README.md  install.sh  run.sh
phase1-verifier/src/: README.md  coordinator_requests.rs  errors.rs  lib.rs  logger.rs  main.rs  tasks.rs  user_input.rs  verifier.rs
phase1-verifier/src/utils/: authentication.rs  logger.rs  mod.rs
phase1-wasm/: Cargo.toml  build.sh
phase1-wasm-keys/: Cargo.toml
phase1-wasm-keys/src/: lib.rs
phase1-wasm/src/: contributor.rs  errors.rs  lib.rs  phase1.rs  pool.rs  requests.rs  structures.rs  tests.rs  utils.rs
phase1/benches/: accumulator.rs  phase1.rs
phase1/scripts/: phase1_chunked.sh  phase1_full.sh
phase1/src/: aggregation.rs  computation.rs  initialization.rs  key_generation.rs  lib.rs  macros.rs  serialization.rs  verification.rs
phase1/src/cli_common/: contribute.rs  mod.rs
phase1/src/helpers/: accumulator.rs  buffers.rs  converters.rs  mod.rs  testing.rs
phase1/src/objects/: parameters.rs  private_key.rs  public_key.rs
phase1/tests/: aleo_compatibility.rs  marlin.rs
phase2/: Cargo.toml
phase2/src/: chunked_groth16.rs  keypair.rs  lib.rs  parameters.rs  polynomial.rs
phase2/src/helpers/: testing.rs
phase2/tests/: aleo_compatibility.rs  mpc.rs
powersoftau/: Cargo.toml  README.md  test.sh
powersoftau/benches/: accumulator.rs
powersoftau/src/: batched_accumulator.rs  keypair.rs  lib.rs  parameters.rs
powersoftau/src/cli_common/: contribute.rs  new_challenge.rs  transform.rs
powersoftau/src/helpers/: mod.rs  raw_accumulator.rs  testing.rs
powersoftau/src/objects/: parameters.rs
powersoftau/src/raw/: raw_accumulator.rs
powersoftau/tests/: aleo_compatibility.rs  aleo_interop.rs
setup-utils/: Cargo.toml
setup-utils/benches/: io.rs  math.rs
setup-utils/src/: elements.rs  errors.rs  groth16_utils.rs  helpers.rs  lib.rs  rayon_cfg.rs  seed.rs
setup-utils/src/io/: mod.rs  read.rs  write.rs
setup1-cli-tools/: Cargo.toml  README.md  keys.json
setup1-cli-tools/src/: public_key_extractor.rs  view_key.rs
setup1-contributor/: Cargo.toml  README.md  keys.json
setup1-contributor/src/: blobstore.rs  errors.rs  lib.rs  main.rs  objects.rs  tasks.rs  utils.rs
setup1-contributor/src/cli/: cli.rs  cli_types.rs  mod.rs
setup1-contributor/src/commands/: contribute.rs  generate.rs
setup1-contributor/src/reliability/: bandwidth.rs  cpu.rs  latency.rs  mod.rs
setup1-contributor/src/setup_keys/: confirmation_key.rs  mod.rs
setup1-shared/: Cargo.toml  README.md
setup1-shared/src/: lib.rs  proof_of_work.rs  structures.rs
setup1-shared/src/reliability/: contributor.rs  coordinator.rs  message.rs  mod.rs
setup1-verifier/: .gitignore  Cargo.toml  README.md  example_response
setup1-verifier/src/: coordinator_requests.rs  errors.rs  lib.rs  main.rs  objects.rs  tasks.rs  verifier.rs  view_key.rs
setup1-verifier/src/utils/: authentication.rs  logger.rs  mod.rs
setup2/: Cargo.toml
setup2/scripts/: phase2_chunked.sh
setup2/src/: combine.rs  contribute.rs  lib.rs  main.rs  new.rs  verify.rs
setup2/src/cli/: contribute.rs  mod.rs  new.rs  verify.rs
snark-utils/: Cargo.toml  README.md
snark-utils/benches/: io.rs  math.rs
snark-utils/src/: groth16_utils.rs  helpers.rs  lib.rs  progress.rs
snark-utils/src/io/: mod.rs  read.rs  write.rs
test-helpers/: Cargo.toml
test-helpers/src/: accumulator_helpers.rs  fixtures.rs  lib.rs
(+17 files in other folders)
