[workspace]
members = [
    "phase1-cli",
    "aleo-setup2",
    "phase1",
    "phase1-cli",
    "phase1-coordinator",
    "phase1-wasm",
    "phase2",
    "setup-utils",
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
incremental = true
debug-assertions = true
debug = true
