[package]
name = "aleo-setup1"
version = "0.3.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo Setup I"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "GPL-3.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phase1 = { path = "../phase1", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", rev = "b24eda5", package = "algebra", version = "0.1.0", features = ["bls12_377", "bw6_761", "derive"] }

cfg-if = { version = "0.1.10" }
gumdrop = { version = "0.7.0", optional = true }
hex-literal = { version = "0.1.4", optional = true }
memmap = { version = "0.7.0", optional = true }
rand = { version = "0.7" }
serde = { version = "1.0.114", optional = true }
serde_derive = { version = "1.0.114", optional = true }
tracing = { version = "0.1.17" }
tracing-subscriber = { version = "0.2.3" }
wasm-bindgen = { version = "0.2.67", features=["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
mocktopus = { version = "0.7.0" }
wasm-bindgen-test = { version = "0.3.15" }

[build-dependencies]
rustc_version = { version = "0.2" }

[features]
default = ["cli"]
parallel = ["phase1/parallel", "setup-utils/parallel", "zexe_algebra/parallel"]

cli = ["gumdrop", "hex-literal", "memmap", "parallel", "phase1/cli", "setup-utils/cli"]
wasm = ["console_error_panic_hook", "phase1/wasm", "rand/wasm-bindgen", "serde", "serde_derive", "setup-utils/wasm"]

# cargo test --target wasm32-unknown-unknown --no-default-features --features wasm
# cargo build --tests --target wasm32-unknown-unknown --no-default-features --features wasm
