[package]
name = "aleo-setup2"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "The Aleo Team <hello@aleo.org>"]
description = "Aleo Setup II"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "GPL-3.0"
edition = "2018"

[dependencies]
phase2 = { path = "../phase2" }
snark-utils = { path = "../snark-utils" }

snarkos-curves = { git = "ssh://git@github.com/AleoHQ/snarkOS.git", package = "snarkos-curves", default-features = false }
snarkos-dpc = { git = "ssh://git@github.com/AleoHQ/snarkOS.git", package = "snarkos-dpc", default-features = false }
snarkos-models = { git = "ssh://git@github.com/AleoHQ/snarkOS.git", package = "snarkos-models", default-features = false }
snarkos-parameters = { git = "ssh://git@github.com/AleoHQ/snarkOS.git", package = "snarkos-parameters", default-features = false }
snarkos-utilities = { git = "ssh://git@github.com/AleoHQ/snarkOS.git", package = "snarkos-utilities" }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", rev = "b24eda5", package = "algebra", version = "0.1.0", features = ["parallel", "full"] }
zexe_groth16 = { git = "https://github.com/scipr-lab/zexe", rev = "b24eda5", package = "groth16", version = "0.1.0", features = ["parallel"] }
zexe_r1cs_core = { git = "https://github.com/scipr-lab/zexe", rev = "b24eda5", package = "r1cs-core", version = "0.1.0" }
zexe_r1cs_std = { git = "https://github.com/scipr-lab/zexe", rev = "b24eda5", package = "r1cs-std", version = "0.1.0" }

anyhow = { version = "1.0.31" }
gumdrop = { version = "0.7.0" }
hex = { version = "0.4.2" }
hex-literal = { version = "0.1.4" }
memmap = { version = "0.7.0" }
rand = { version = "0.7.3" }
rand_xorshift = { version = "0.2.0" }
rusty-hook = { version = "0.11.2" }
thiserror = { version = "1.0.11" }
tracing-subscriber = { version = "0.2.3" }
