[package]
name = "aleo-snark-setup"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

description = "MPC for the Aleo Inner and Outer SNARK"

[dependencies]
phase2 = { path = "../phase2" }
snark-utils = { path = "../snark-utils" }

zexe_groth16 = { package = "groth16", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel"] }
zexe_algebra = { package = "algebra", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel", "full"] }
zexe_r1cs_std = { package = "r1cs-std", git = "https://github.com/scipr-lab/zexe", version = "0.1.0" }
zexe_r1cs_core = { package = "r1cs-core", git = "https://github.com/scipr-lab/zexe", version = "0.1.0" }

snarkos-models = { path = "../../snarkOS/models" }
snarkos-curves = { path = "../../snarkOS/curves" }
snarkos-dpc = { path = "../../snarkOS/dpc" }
snarkos-utilities = { path = "../../snarkOS/utilities" }
snarkos-parameters = { path = "../../snarkOS/parameters" }

gumdrop = "0.7.0"
hex-literal = "0.1.4"
rand = "0.7.3"
rand_xorshift = "0.2.0"
thiserror = "1.0.11"
hex = "0.4.2"
tracing-subscriber = "0.2.3"
memmap = "0.7.0"
anyhow = "1.0.31"
