[package]
name = "aleo-snark-setup"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "The Aleo Team <hello@aleo.org>"]
description = "MPC for the Aleo Inner and Outer SNARK"
homepage = "https://github.com/AleoHQ/snark-setup"
repository = "https://github.com/AleoHQ/snark-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
phase2 = { path = "../phase2" }
snark-utils = { path = "../snark-utils" }

snarkos-curves = { path = "../../snarkOS/curves" }
snarkos-dpc = { path = "../../snarkOS/dpc" }
snarkos-models = { path = "../../snarkOS/models" }
snarkos-parameters = { path = "../../snarkOS/parameters" }
snarkos-utilities = { path = "../../snarkOS/utilities" }

zexe_algebra = { package = "algebra", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel", "full"] }
zexe_groth16 = { package = "groth16", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel"] }
zexe_r1cs_core = { package = "r1cs-core", git = "https://github.com/scipr-lab/zexe", version = "0.1.0" }
zexe_r1cs_std = { package = "r1cs-std", git = "https://github.com/scipr-lab/zexe", version = "0.1.0" }

anyhow = { version = "1.0.31" }
gumdrop = { version = "0.7.0" }
hex = { version = "0.4.2" }
hex-literal = { version = "0.1.4" }
memmap = { version = "0.7.0" }
rand = { version = "0.7.3" }
rand_xorshift = { version = "0.2.0" }
rusty-hook = { version = "0.11.2" }
thiserror = { version = "1.0.11" }
tracing-subscriber = { version = "0.2.3" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
debug-assertions = true
debug = true
