[package]
name = "phase1-cli"
version = "0.3.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "CLI implementation of Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
phase1 = { path = "../phase1" }
setup-utils = { path = "../setup-utils" }

snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }

fs-err = "2.6"
gumdrop = { version = "0.8.0" }
hex = { version = "0.4.2" }
memmap = { version = "0.7.0" }
rand = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.18" }

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = []
cli = ["phase1/cli", "parallel", "setup-utils/cli"]
parallel = ["phase1/parallel", "setup-utils/parallel"]

[[bin]]
name = "phase1"
required-features = ["cli"]

[[bin]]
name = "prepare_phase2"
required-features = ["cli"]
