[package]
name = "phase1-coordinator"
version = "0.3.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Coordinator implementation of Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "phase1-coordinator"
path = "src/main.rs"

[dependencies]
phase1 = { path = "../phase1" }
setup-utils = { path = "../setup-utils", default-features = false }

snarkos-curves = { version = "1.1.4", default-features = false }
snarkos-models = { version = "1.1.4", default-features = false }

anyhow = { version = "1.0.37" }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3.1.7" }
itertools = { version = "0.9.0" }
hex = { version = "0.4.2" }
memmap = { version = "0.7.0" }
once_cell = { version = "1.5.2" }
rand = { version = "0.7.3" }
rayon = { version = "1.4.1" }
serde = { version = "1.0", features = ["derive"] }
serde-aux = { version = "0.6" }
serde-diff = { version = "0.4" }
serde_json = { version = "1.0" }
serde_with = { version = "1.8", features = ["chrono", "macros"] }
thiserror = { version = "1.0" }
tokio = { version = "0.3", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2", optional = true }
url = { version = "1.0" }

[dev-dependencies]
serial_test = { version = "0.5" }
tracing-subscriber = { version = "0.2" }

[features]
default = []
operator = ["testing"]
testing = ["tracing-subscriber"]
