[package]
name = "phase1-coordinator"
version = "0.3.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Coordinator implementation of Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "phase1-coordinator"
path = "src/main.rs"
required-features = ["parallel"]

[dependencies]
phase1 = { path = "../phase1" }
setup-utils = { path = "../setup-utils" }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }

anyhow = { version = "1.0.37" }
fs-err = { version = "2.6.0" }
itertools = "0.10"
futures = { version = "0.3" }
hex = { version = "0.4.2" }
memmap = { version = "0.7.0" }
once_cell = { version = "1.5.2" }
rand = { version = "0.8" }
rayon = { version = "1.4.1" }
serde = { version = "1.0", features = ["derive"] }
serde-aux = { version = "3.0" }
serde-diff = { version = "0.4" }
serde_json = { version = "1.0" }
serde_with = { version = "1.8", features = ["macros"] }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
serial_test = { version = "0.5" }
tracing-subscriber = { version = "0.3" }

[features]
default = []
operator = ["testing", "setup-utils/cli"]
parallel = ["phase1/parallel", "setup-utils/parallel"]
testing = []
