[package]
name = "phase1-wasm"
version = "0.3.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "WASM implementation of Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phase1 = { path = "../phase1", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

snarkos-curves = { version = "1.1.4", default-features = false }
snarkos-models = { version = "1.1.4", default-features = false }

rand = { version = "0.7" }
serde = { version = "1.0.114" }
serde_derive = { version = "1.0.114" }
tracing = { version = "0.1.21" }
tracing-subscriber = { version = "0.2.3" }
wasm-bindgen = { version = "0.2.69", features=["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
rand_xorshift = { version = "0.2" }
wasm-bindgen-test = { version = "0.3.18" }

[build-dependencies]
rustc_version = { version = "0.3" }

[features]
default = []
wasm = ["console_error_panic_hook", "phase1/wasm", "rand/wasm-bindgen", "setup-utils/wasm"]

# cargo test --target wasm32-unknown-unknown --no-default-features --features wasm
# cargo build --tests --target wasm32-unknown-unknown --no-default-features --features wasm
# cargo test --release --target wasm32-unknown-unknown --no-default-features --features wasm
