[package]
name = "phase1"
version = "0.3.0"
authors = ["Sean Bowe", "Alex Vlasov", "The Aleo Team <hello@aleo.org>"]
description = "Core logic for Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[[bench]]
name = "phase1"
harness = false
required-features = ["benchmark"]

[dependencies]
setup-utils = { path = "../setup-utils", default-features = false }
snarkvm-algorithms = { version = "0.6", default-features = false }
snarkvm-curves = { version = "0.6" }
snarkvm-fields = { version = "0.6" }
snarkvm-utilities = { version = "0.6" }

cfg-if = { version = "0.1.10" }
criterion = { version = "0.3", optional = true }
itertools = { version = "0.9.0" }
rand = { version = "0.8" }
rayon = { version = "1.4.1", optional = true }
tracing = { version = "0.1.21" }
derivative = { version = "2", features = [ "use_core" ] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
phase1 = { path = "./", features = ["testing"] }
snarkvm-marlin = { version = "0.6" }
snarkvm-polycommit = { version = "0.6" }
snarkvm-posw = { version = "0.6" }
snarkvm-r1cs = { version = "0.6" }

anyhow = { version = "1.0.37" }
blake2 = { version = "0.8", default-features = false }
num-traits = { version = "0.2.12" }
rusty-hook = { version = "0.11.2" }

[features]
default = ["cli"]
cli = ["parallel", "setup-utils/cli"]
parallel = ["rayon", "setup-utils/parallel"]
wasm = ["setup-utils/wasm"]

benchmark = ["criterion"]
testing = ["parallel"]

[[test]]
name = "marlin"
path = "tests/marlin.rs"
required-features = ["phase1/testing", "cli"]

