[package]
name = "phase1"
version = "0.3.0"
authors = ["Sean Bowe", "Alex Vlasov", "The Aleo Team <hello@aleo.org>"]
description = "Core logic for Phase 1"
homepage = "https://github.com/AleoHQ/aleo-setup"
repository = "https://github.com/AleoHQ/aleo-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[[bench]]
name = "phase1"
harness = false
required-features = ["benchmark"]

[dependencies]
setup-utils = { path = "../setup-utils" }

snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2", default-features = false }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-fields = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }


cfg-if = "1.0"
derivative = { version = "2", features = [ "use_core" ] }
itertools = "0.10"
rand = { version = "0.8" }
rayon = { version = "1.4.1", optional = true }
tracing = { version = "0.1.21" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3" }
phase1 = { path = "./", features = ["testing"] }
snarkvm-marlin = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-polycommit = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }
snarkvm-r1cs = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "092dfd2" }

anyhow = { version = "1.0.37" }
blake2 = { version = "0.9", default-features = false }
memmap = { version = "0.7.0" }
num-traits = { version = "0.2.12" }
rand_chacha = { version = "0.3" }
rusty-hook = { version = "0.11.2" }

[features]
default = []
cli = ["parallel", "setup-utils/cli"]
parallel = ["rayon", "setup-utils/parallel", "snarkvm-algorithms/parallel"]
wasm = ["setup-utils/wasm"]

testing = ["parallel"]

[[test]]
name = "marlin"
path = "tests/marlin.rs"
required-features = ["phase1/testing", "cli"]
